# OrdoRead

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  setup_llama.sh
app/: build.gradle.kts
app/src/androidTest/java/com/identifiant/ordoread/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/identifiant/ordoread/: MainActivity.kt  OrdoReadApp.kt
app/src/main/java/com/identifiant/ordoread/data/ai/: LlamaCpp.kt  LlamaCppPrescriptionAnalyzer.kt  ModelDownloadManager.kt  SmartPrescriptionAnalyzer.kt
app/src/main/java/com/identifiant/ordoread/data/device/: ImagePreprocessor.kt  MLKitTextRecognitionService.kt
app/src/main/java/com/identifiant/ordoread/data/parser/: LocalPrescriptionAnalyzer.kt
app/src/main/java/com/identifiant/ordoread/di/: DeviceModule.kt
app/src/main/java/com/identifiant/ordoread/domain/ai/: PrescriptionAnalyzer.kt
app/src/main/java/com/identifiant/ordoread/domain/device/: MLKitTextRecognitionService.kt  TextRecognitionService.kt
app/src/main/java/com/identifiant/ordoread/presentation/: MainViewModel.kt
app/src/main/java/com/identifiant/ordoread/presentation/ocr/: CameraPreview.kt
app/src/main/java/com/identifiant/ordoread/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/identifiant/ordoread/utils/: StorageUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/identifiant/ordoread/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
